src/app/styles/theme/dashboard/index.sass
@import ../config

section.lyt-dashboard
  display: flex
  flex-direction: row

  > .header-wrapper
    // Layout style
    background: $lyt-dashboard-header-bg
    border-bottom: $lyt-dashboard-border
    padding-left: 15px
    padding-right: 15px
    position: fixed
    top: 0px
    width: 100vw
    height: $lyt-dashboard-header-height
    z-index: 100
    > .wrapper
      align-items: center
      display: flex
      height: 100%
      > .wrapper-item
        flex: 1

    // Component style
    h1, h2, h3, h4, h5, h6, p, span
      margin: 0px

    .title
      text-transform: capitalize

    .profile, .button
      align-items: center
      display: inline-flex
      justify-content: center
      vertical-align: middle
      + .profile, + .button
        margin-left: 5px

    .profile
      img
        border: $lyt-dashboard-header-button-border
        border-radius: 100%
        padding: 2px
        width: 40px
        height: 40px
        +no-select()

    .button
      border: $lyt-dashboard-header-button-border
      border-radius: 100%
      text-decoration: none
      padding: 2px
      +no-select()
      &.circle
        width: 40px
        height: 40px
      &.text
        border-radius: 4px
        padding: 2px 10px
        .icon-left
          margin-right: 5px
        .icon-right
          margin-left: 5px
      &.is-mobile
        display: none
      +bp-medium
        &:not(.is-mobile)
          display: none
        &.is-mobile
          display: inline-flex

  > .menu-wrapper
    // Layout style
    background: $lyt-dashboard-menu-bg
    padding-top: $lyt-dashboard-header-height
    height: 100vh
    &:not(.is-mobile)
      border-right: $lyt-dashboard-border
      width: $lyt-dashboard-menu-width
      +transition(margin linear 0.2s)
      &.is-close
        margin-left: -$lyt-dashboard-menu-width
    &.is-mobile
      display: none
      margin-left: -100vw
      position: absolute
      width: 100vw
    +bp-medium
      &:not(.is-mobile)
        display: none
      &.is-mobile
        display: block
        &.is-open
          margin-left: 0

    // Component style
    ul
      list-style: none
      margin: 0px
      padding: 0px
      li
        &:nth-child(n+2)
          border-top: $lyt-dashboard-border
        a
          display: block
          padding: 15px 20px
          position: relative
          text-decoration: none
          &:after
            content: ""
            background: $lyt-dashboard-menu-bullet
            border-radius: 100%
            margin: auto 0px
            opacity: 0
            position: absolute
            top: 0px
            bottom: 0px
            right: 5px
            width: 10px
            height: 10px
            +transition(all ease-in 0.2s)
          &.active:after, &:hover:after, &:focus:after
            opacity: 1
            right: 10px
          .icon
            text-align: center
            width: 20px
            + .text
              margin-left: 10px

  > .content-wrapper
    // Layout style
    flex: 1
    padding-top: $lyt-dashboard-header-height

  > .copyright-wrapper
    // Layout style
    position: fixed
    right: 15px
    bottom: 15px

    // Component style
    .logo
      display: inline-block
      opacity: 0.5
      text-align: left
      text-decoration: none
      &:hover, &:focus
        opacity: 1
      img
        height: 25px
      span.subtext
        color: $logo-subtext
        display: block
        font-weight: bold
        margin-top: -7px
        margin-left: -1px
        font-size: 0.53rem

